Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added the possibility for a widget to specify if it has a input area (ie for
  user input). Using information about a potential input area is important for
  accessibility: it is used to associate the widget label with a potential input
  area. To test this, just "click" on the "title" label of any CPS document
  layout and your pointer will jump to the user field.
- CPSIdentifierWidget: the regular expression is now a string property, this allow
  you to change it if you need a special pattern for user ids
Bug fixes:
~~~~~~~~~~
- Removed the debian directory of this product since this product will never be
  packaged on its own as a Debian package.
- i18n: added missing translations for fr & en
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Added absolute url to the photo popup call so that it works from a box
  (where the context is not the image itself)
- related to #297 : do not loose file title on the attached file widget when a
  new file is loaded
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- The secure module importer ('modules') is available in the expression
  context of field, widget and layout expressions.
- Added unit tests for CPSDateTime widget